--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "@testing-library/user-event": "^7.2.1",
     "eslint-plugin-flowtype": "4.6.0",
     "express": "^4.17.1",
+    "firebase": "^4.2.0",
     "moment": "^2.26.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "numeral": "^2.0.6",
     "react": "^16.13.0",
     "react-addons-shallow-compare": "^15.6.2",
@@ -22,16 +23,16 @@
     "react-router-dom": "^4.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.2.0",
+    "redux-thunk": "^2.3.0",
     "typescript": "^3.8.3",
     "uuid": "^3.4.0"
   },
   "scripts": {
+    "s": "react-scripts start",
     "start": "node server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": ""
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
